# InC-Dev-Challenge

./: .gitignore  INSTRUCTIONS.md  README.md  cli.py  data_dah.csv  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline.yaml
src/data/: datasource.py
src/engine/: backtest_engine.py
src/exec/: broker.py
src/labels/: target.py
src/metrics/: reporter.py
src/models/: base.py  baseline.py
src/risk/: manager.py
src/strategy/: baseline.py  policy.py
src/utils/: calendar.py  config.py  logging.py
tests/: test_bounds.py  test_leakage.py  test_pnl_bookkeeping.py
